<resources>
    <string name="app_name">骆驼加油</string>
    <string name="ads_string">[{\"http_url\": \"\",\"image_url\": \"\"}]</string>
    <string name="seed_num">1</string>
    <string name="sec_prefix">_\\]Z[</string>
    <string name="wx_mid">ccc</string>
    <string name="base_exit">再按一次,退出骆驼加油</string>
    <string name="set_util">GRPC骆驼加油上传数据</string>
    <string name="get_util">GRPC骆驼加油返回数据</string>
    <string name="login_send_msg">发送验证码</string>
    <string name="toolbar_label"> </string>
    <string name="alert_title">温馨提示</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_confirm">确认</string>
    <string name="login_ccet_01_hint">使用手机号码登录</string>
    <string name="login_ccet_02_hint">验证码</string>
    <string name="login_begin_user">开始使用</string>
    <string name="login_resend_msg">重新发送</string>
    <string name="login_time_count_down">已发送(%s)</string>
    <string name="login_alter">
        <Data><![CDATA[
        <font color="#ffffff">开始使用表示同意骆驼加油的</font>
        <font color="#0085d0">用户协议</font>
        <font color="#ffffff">及</font>
        <font color="#0085d0">隐私声明</font>
        ]]>
        </Data>
    </string>
    <string name="kaiyoubao_label">揩油宝</string>
    <string name="kaiyoubao_issue_label">\?</string>
    <string name="kaiyoubao_label_01">可用余额(元)</string>
    <string name="kaiyoubao_user">一键使用</string>
    <string name="kaiyoubao_cost_title">揩油宝消费</string>
    <string name="kaiyoubao_cost_01">可消费余额(元)</string>
    <string name="kaiyoubao_cost_02">油卡充值</string>
    <string name="kaiyoubao_cost_03">话费充值</string>
    <string name="kaiyoubao_cost_04">流量充值</string>
    <string name="kaiyoubao_cost_05">礼品卡兑换</string>
    <string name="kaiyoubao_pwd_dialog">%1$s秒后自动跳转到上级页面</string>
    <string name="center_title">用户中心</string>
    <string name="center_01">我的钱包</string>
    <string name="center_user_header">
        <Data><![CDATA[
        <font color="#808080">%s</font>
        <font color="#0085d0"><br>认证领取油费</font>
        ]]>
        </Data>
    </string>
    <string name="center_user_footer_01">元</string>
    <string name="center_user_footer_02">邀请好友赠送</string>
    <string name="center_user_footer_03">加油券</string>
    <string name="center_user_detail_title">个人资料</string>
    <string name="center_user_detail_tv_01_01">
        <Data><![CDATA[
        手&nbsp;&nbsp;机&nbsp;&nbsp;号
        ]]>
        </Data>
    </string>
    <string name="center_user_detail_tv_01_02">修改</string>
    <string name="center_user_detail_tv_02">邮寄地址</string>
    <string name="center_user_detail_tv_03">注册日期</string>
    <string name="center_user_detail_btn">确  认</string>
    <string name="insurance_price_title">保险报价</string>
    <string name="oil_btn_recharge">支  付</string>
    <string name="oil_ccet_hint">请输入加油卡号</string>
    <string name="oil_title">油卡充值</string>
    <string name="oil_total_money">

        <Data>

    <![CDATA[<font color="#000000">合计：</font><font color="#FF0000">¥%1$s元</font>]]>

        </Data>

    </string>
    <string name="oil_card_check">
        <Data><![CDATA[您尾号为 “<font color="#4dadde">%1$s </font>” 的加油卡<br>持卡人为 “<font color="#4dadde">%2$s</font>”]]></Data>
    </string>
    <string name="oil_recharge_result">加油卡充值%1$s元</string>
    <string name="phone_recharge_result">话费充值%1$s元</string>
    <string name="exchange_title">话费购</string>
    <string name="exchange_btn">确认购买</string>
    <string name="exchange_label_false">
        <Data><![CDATA[<font color="#0085d0">目前仅限</font><font color="#FFA500">江苏电信用户</font><font color="#0085d0">使用</font>]]></Data></string>
    <string name="exchange_label_true">
        <Data><![CDATA[<font color="#0085d0">可用余额：</font><font color="#FFA500">%1$s</font><font color="#0085d0">元</font>]]></Data></string>
    <string name="exchange_label_1">可用余额大于200</string>
    <string name="exchange_label_2">暂不支持</string>
    <string name="exchange_label_3">目前仅支持江苏电信用户使用 请更换号码购买</string>
    <string name="exchange_label_insure">确定</string>
    <string name="exchange_label_cancel">取消</string>
    <string name="exchange_header_label_1">话费购：使用手机话费支付购物费用。</string>
    <string name="exchange_footer_label_1">购买的加油费直接充值至“揩油宝”账户。</string>
    <string name="exchange_footer_label_2">订单受理成功后，预付费用户两个工作日内到账，后付费用户次月结清本月账单后到账。</string>
    <string name="exchange_explain">
        <Data><![CDATA[<font color="#0085d0">兑换的油费</font><font color="#000000">直接充值至揩油宝账户。</font>]]></Data></string>
    <string name="exchange_msg_confirm">确  认</string>
    <string name="exchange_msg_count">请重新填写短信验证码,您当前还有%1$s次机会</string>
    <string name="exchange_result_title">受理成功</string>
    <string name="exchange_result_01">预计 %1$s</string>
    <string name="exchange_result_02">%1$s元油费充值到揩油宝账户</string>
    <string name="flow_discount_kyb">平台赠送%1$s元揩油币</string>
    <string name="result_text">
        <Data><![CDATA[前往各加油站<big><font color="#FF0000">圈存</font></big>加油<br>（各大加油站24小时均可圈存）]]></Data></string>
    <string name="wx_recharge_result_01">成功支付%1$s元</string>
    <string name="wx_recharge_result_02">立即充值%1$s元到加油卡</string>
    <string name="insurance_platform_discount">
        <Data>
            <![CDATA[
                <font color="#000">%1$s</font><font color="#0085d0">%2$s</font>
            ]]>
        </Data>
    </string>
    <string name="insurance_query_two_text">
        <Data><![CDATA[<font color="#cccccc">本次可抵扣</font><font color="#FF8C00">%1$s</font><font color="#cccccc">元&#160;&#160;</font>]]></Data></string>
    <string name="insurance_platform_detail_money">
        <Data>
            <![CDATA[
                <font color="#000">%1$s</font><font color="#0085d0">%2$s</font>
            ]]>
        </Data>
    </string>
    <string name="weex_pay_result">支付结果</string>
    <string name="weex_complete">完成</string>
    <string name="weex_order_info">订单信息</string>
    <string name="weex_card_no">加油卡号</string>
    <string name="weex_confirm">确定</string>
</resources>