<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/line"
    android:orientation="horizontal"
    android:padding="@dimen/dp_14">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/center_bottom_left" />

    <!-- <item name="android:gravity">center</item>
        <item name="android:textColor">@android:color/white</item>-->
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_55" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_user_footer_01"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_22" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/center_bottom_mid" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_user_footer_02"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_user_footer_03"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_36" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/center_bottom_right" />


</LinearLayout>