<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_22"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kaiyoubaocose_stroke_solid_corners_white"
            android:padding="@dimen/dp_14">

            <TextView
                android:id="@+id/tv_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:textColor="@android:color/black" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kaiyoubao_cost_01"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:text="选择项目" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kaiyoubaocose_stroke_solid_corners_white"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_14">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/icon_right_arrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kaiyoubao_cost_02"
                    android:textColor="@android:color/black" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_066"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_14">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/icon_right_arrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kaiyoubao_cost_03"
                    android:textColor="@android:color/black" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_066"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/rl_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_14">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/icon_right_arrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kaiyoubao_cost_05"
                    android:textColor="@android:color/black" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>