<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/dp_0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll">

                <ImageView
                    android:id="@+id/iv_01"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_90"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_16"
                    android:src="@mipmap/center_user_icon" />

                <TextView
                    android:id="@+id/tv_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_01"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/dp_16"
                    android:gravity="center"
                    android:textSize="@dimen/sp_18" />

            </RelativeLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_12"
                    android:background="@drawable/usercenter_detail_stroke_solid_corners_white"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:id="@+id/tv_01_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/tv_01_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@id/tv_01_01"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/tv_01_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingLeft="@dimen/dp_8"
                        android:paddingRight="@dimen/dp_8"
                        android:text="@string/center_user_detail_tv_01_02"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/sp_18" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:background="@drawable/usercenter_detail_stroke_solid_corners_white"
                    android:padding="@dimen/dp_12">

                    <TextView
                        android:id="@+id/tv_02_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/center_user_detail_tv_02"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/tv_02_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:layout_toRightOf="@id/tv_02_01"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_18" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:background="@drawable/usercenter_detail_stroke_solid_corners_white"
                    android:padding="@dimen/dp_12">

                    <TextView
                        android:id="@+id/tv_03_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/center_user_detail_tv_03"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/tv_03_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@id/tv_03_01"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_18" />

                </RelativeLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/layout_btn" />
</LinearLayout>